src/unit_tests/Custom/type_checker/fail/new.cl
class Main {
    a : A <- new Asd;

    main() : Int { 1 };
};